cmake_minimum_required(VERSION 3.9)
project(cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp
        Answer.h
        BSTIterator.h
        Calculator.h
        Codec.h
        ConstructBinaryTree.h
        HitCounter.h
        Logger.h
        LRUCache.h
        main.cpp
        MedianFinder.h
        MinStack.h
        MovingAverage.h
        NestedInteger.h
        NumArray.h
        NumMatrix.h
        PeekingIterator.h
        Permutation.h
        PhoneDirectory.h
        QueueStack.h
        RandomizedSet.h
        RangeSum.h
        Read4.h
        StackQueue.h
        TicTacToe.h
        Trie.h
        Twitter.h
        TwoSum.h
        ValidWordAbbr.h
        Vector2D.h
        WordDictionary.h
        ZigzagIterator.h)
